Add Amazon Secrets Manager extension based on pattern of SSM extension

--- a/extensions/amazon-services/pom.xml
+++ b/extensions/amazon-services/pom.xml
@@ -24,5 +24,6 @@
         <module>ses</module>
         <module>kms</module>
         <module>ssm</module>
+        <module>secretsmanager</module>
     </modules>
 </project>
