--- a/integration-tests/amazon-services/src/main/resources/application.properties
+++ b/integration-tests/amazon-services/src/main/resources/application.properties
@@ -49,3 +49,9 @@ quarkus.iam.aws.region=us-east-1
 quarkus.iam.aws.credentials.type=static
 quarkus.iam.aws.credentials.static-provider.access-key-id=test-key
 quarkus.iam.aws.credentials.static-provider.secret-access-key=test-secret
+
+quarkus.secretsmanager.endpoint-override=${secretsmanager.url}
+quarkus.secretsmanager.aws.region=us-east-1
+quarkus.secretsmanager.aws.credentials.type=static
+quarkus.secretsmanager.aws.credentials.static-provider.access-key-id=test-key
+quarkus.secretsmanager.aws.credentials.static-provider.secret-access-key=test-secret
