--- a/integration-tests/amazon-services/pom.xml
+++ b/integration-tests/amazon-services/pom.xml
@@ -22,6 +22,7 @@
         <ses.url>http://localhost:8012</ses.url>
         <iam.url>http://localhost:8013</iam.url>
         <ssm.url>http://localhost:8014</ssm.url>
+        <secretsmanager.url>http://localhost:8015</secretsmanager.url>
     </properties>
 
     <dependencies>
@@ -68,6 +69,10 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-amazon-ssm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-amazon-secretsmanager</artifactId>
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
@@ -203,6 +208,19 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-amazon-secretsmanager-deployment</artifactId>
+            <version>${project.version}</version>
+            <type>pom</type>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
             <artifactId>quarkus-arc-deployment</artifactId>
             <version>${project.version}</version>
             <type>pom</type>
@@ -321,7 +339,7 @@
                                     <alias>aws-local-stack</alias>
                                     <run>
                                         <env>
-                                            <SERVICES>s3,dynamodb,sns,sqs,kms,ssm,ses</SERVICES>
+                                            <SERVICES>s3,dynamodb,sns,sqs,kms,ssm,ses,secretsmanager</SERVICES>
                                             <START_WEB>0</START_WEB>
                                         </env>
                                         <ports>
@@ -333,6 +351,7 @@
                                             <port>8012:4566</port> <!-- SES -->
                                             <port>8013:4593</port> <!-- IAM -->
                                             <port>8014:4583</port> <!-- SSM -->
+                                            <port>8015:4584</port> <!-- Secrets Manager -->
                                         </ports>
                                         <log/>
                                         <wait>
