--- a/ses/runtime/pom.xml
+++ b/ses/runtime/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.quarkiverse.amazonservices</groupId>
         <artifactId>quarkus-amazon-ses-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>quarkus-amazon-ses</artifactId>
