--- a/ssm/runtime/pom.xml
+++ b/ssm/runtime/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.quarkiverse.amazonservices</groupId>
         <artifactId>quarkus-amazon-ssm-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>quarkus-amazon-ssm</artifactId>
