--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -12,15 +12,15 @@
     <description>The Amazon Services clients integration tests</description>
 
     <properties>
-        <dynamodb.url>http://localhost:8000</dynamodb.url>
-        <s3.url>http://localhost:8008</s3.url>
-        <sns.url>http://localhost:8009</sns.url>
-        <sqs.url>http://localhost:8010</sqs.url>
-        <kms.url>http://localhost:8011</kms.url>
-        <ses.url>http://localhost:8012</ses.url>
-        <iam.url>http://localhost:8013</iam.url>
-        <ssm.url>http://localhost:8014</ssm.url>
-        <secretsmanager.url>http://localhost:8015</secretsmanager.url>
+        <dynamodb.url>http://localhost:4566</dynamodb.url>
+        <s3.url>http://localhost:4566</s3.url>
+        <sns.url>http://localhost:4566</sns.url>
+        <sqs.url>http://localhost:4566</sqs.url>
+        <kms.url>http://localhost:4566</kms.url>
+        <ses.url>http://localhost:4566</ses.url>
+        <iam.url>http://localhost:4566</iam.url>
+        <ssm.url>http://localhost:4566</ssm.url>
+        <secretsmanager.url>http://localhost:4566</secretsmanager.url>
     </properties>
 
     <dependencies>
@@ -98,6 +98,11 @@
             <artifactId>rest-assured</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -136,7 +141,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>localstack/localstack:0.11.1</name>
+                            <name>localstack/localstack:0.13.1</name>
                             <alias>aws-local-stack</alias>
                             <run>
                                 <env>
@@ -144,15 +149,7 @@
                                     <START_WEB>0</START_WEB>
                                 </env>
                                 <ports>
-                                    <port>8000:4569</port> <!-- Dynamodb -->
-                                    <port>8008:4572</port> <!-- S3 -->
-                                    <port>8009:4575</port> <!-- SNS -->
-                                    <port>8010:4576</port> <!-- SQS -->
-                                    <port>8011:4599</port> <!-- KMS -->
-                                    <port>8012:4566</port> <!-- SES -->
-                                    <port>8013:4593</port> <!-- IAM -->
-                                    <port>8014:4583</port> <!-- SSM -->
-                                    <port>8015:4584</port> <!-- Secrets Manager -->
+                                    <port>4566:4566</port>
                                 </ports>
                                 <log />
                                 <wait>
