Add guides to quarkus-extension.yaml

--- a/iam/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/iam/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -9,6 +9,7 @@ metadata:
   guide: "https://quarkus.io/guides/amazon-iam"
   categories:
     - "data"
+  guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-iam.html
   status: "stable"
   config:
   - "quarkus.iam."
