--- a/kms/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/kms/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -9,6 +9,7 @@ metadata:
   guide: "https://quarkus.io/guides/amazon-kms"
   categories:
     - "data"
+  guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-kms.html
   status: "stable"
   config:
   - "quarkus.kms."
