--- a/secretsmanager/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/secretsmanager/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -9,6 +9,7 @@ metadata:
   guide: "https://quarkus.io/guides/amazon-secretsmanager"
   categories:
     - "data"
+  guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-secretsmanager.html
   status: "preview"
   config:
   - "quarkus.secretsmanager."
