--- a/ses/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/ses/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -9,6 +9,7 @@ metadata:
   guide: "https://quarkus.io/guides/amazon-ses"
   categories:
     - "data"
+  guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-ses.html
   status: "stable"
   config:
   - "quarkus.ses."
