--- a/dynamodb/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/dynamodb/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -10,6 +10,7 @@ metadata:
   guide: "https://quarkus.io/guides/amazon-dynamodb"
   categories:
     - "data"
+  guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-dynamodb.html
   status: "stable"
   config:
   - "quarkus.dynamodb."
