--- a/sqs/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/sqs/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -9,6 +9,7 @@ metadata:
   guide: "https://quarkus.io/guides/amazon-sqs"
   categories:
     - "data"
+  guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-sqs.html
   status: "stable"
   config:
   - "quarkus.sqs."
