--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -38,6 +38,12 @@ quarkus.ssm.aws.credentials.type=static
 quarkus.ssm.aws.credentials.static-provider.access-key-id=test-key
 quarkus.ssm.aws.credentials.static-provider.secret-access-key=test-secret
 
+quarkus.sts.endpoint-override=${sts.url}
+quarkus.sts.aws.region=us-east-1
+quarkus.sts.aws.credentials.type=static
+quarkus.sts.aws.credentials.static-provider.access-key-id=test-key
+quarkus.sts.aws.credentials.static-provider.secret-access-key=test-secret
+
 quarkus.ses.endpoint-override=${ses.url}
 quarkus.ses.aws.region=us-east-1
 quarkus.ses.aws.credentials.type=static
