--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>bom</module>
         <module>build-parent</module>
+        <module>cognito-user-pools</module>
         <module>common</module>
         <module>dynamodb</module>
         <module>iam</module>
