--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -55,3 +55,9 @@ quarkus.secretsmanager.aws.region=us-east-1
 quarkus.secretsmanager.aws.credentials.type=static
 quarkus.secretsmanager.aws.credentials.static-provider.access-key-id=test-key
 quarkus.secretsmanager.aws.credentials.static-provider.secret-access-key=test-secret
+
+quarkus.cognito-user-pools.endpoint-override=${cognitoidentity.url}
+quarkus.cognito-user-pools.aws.region=us-east-1
+quarkus.cognito-user-pools.aws.credentials.type=static
+quarkus.cognito-user-pools.aws.credentials.static-provider.access-key-id=test-key
+quarkus.cognito-user-pools.aws.credentials.static-provider.secret-access-key=test-secret
