docs: add cognito-user-pools to README

--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>quarkus-amazon-ssm-deployment</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-cognito-user-pools-deployment</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -108,6 +113,7 @@
                                         <include>quarkus-amazon-sns.adoc</include>
                                         <include>quarkus-amazon-sqs.adoc</include>
                                         <include>quarkus-amazon-ssm.adoc</include>
+                                        <include>quarkus-amazon-cognitouserpools.adoc</include>
                                     </includes>
                                     <filtering>false</filtering>
                                 </resource>
