--- a/dynamodb/deployment/src/test/resources/default-credentials-config.properties
+++ b/dynamodb/deployment/src/test/resources/default-credentials-config.properties
@@ -4,3 +4,4 @@ quarkus.dynamodb.aws.credentials.type=default
 quarkus.dynamodb.aws.credentials.default-provider.async-credential-update-enabled=true
 quarkus.dynamodb.aws.credentials.default-provider.reuse-last-provider-enabled=true
 
+quarkus.dynamodb.devservices.enabled=false
