--- a/dynamodb/deployment/src/test/resources/sync-tls-key-filestore-config.properties
+++ b/dynamodb/deployment/src/test/resources/sync-tls-key-filestore-config.properties
@@ -4,3 +4,5 @@ quarkus.dynamodb.sync-client.tls-key-managers-provider.type=file-store
 quarkus.dynamodb.sync-client.tls-key-managers-provider.file-store.path=/tmp/file.key
 quarkus.dynamodb.sync-client.tls-key-managers-provider.file-store.type=pkcs11
 quarkus.dynamodb.sync-client.tls-key-managers-provider.file-store.password=thePassword
+
+quarkus.dynamodb.devservices.enabled=false
