--- a/dynamodb/deployment/src/test/resources/sync-tls-trust-trustall-config.properties
+++ b/dynamodb/deployment/src/test/resources/sync-tls-trust-trustall-config.properties
@@ -1,3 +1,5 @@
 quarkus.dynamodb.aws.region=us-east-1
 
 quarkus.dynamodb.sync-client.tls-trust-managers-provider.type=trust-all
+
+quarkus.dynamodb.devservices.enabled=false
