--- a/common/pom.xml
+++ b/common/pom.xml
@@ -15,6 +15,7 @@
 
     <modules>
         <module>runtime</module>
+        <module>deployment-spi</module>
         <module>deployment</module>
     </modules>
     
