--- a/dynamodb/deployment/src/test/resources/async-broken-proxy-config.properties
+++ b/dynamodb/deployment/src/test/resources/async-broken-proxy-config.properties
@@ -1,3 +1,4 @@
 quarkus.dynamodb.async-client.proxy.enabled = true
 quarkus.dynamodb.async-client.proxy.endpoint = http://user:name@127.1.1.1?foo=bar
 
+quarkus.dynamodb.devservices.enabled=false
