--- a/dynamodb/deployment/src/test/resources/async-tls-trust-filestore-config.properties
+++ b/dynamodb/deployment/src/test/resources/async-tls-trust-filestore-config.properties
@@ -4,3 +4,5 @@ quarkus.dynamodb.async-client.tls-trust-managers-provider.type=file-store
 quarkus.dynamodb.async-client.tls-trust-managers-provider.file-store.path=/tmp/file.key
 quarkus.dynamodb.async-client.tls-trust-managers-provider.file-store.type=pkcs11
 quarkus.dynamodb.async-client.tls-trust-managers-provider.file-store.password=thePassword
+
+quarkus.dynamodb.devservices.enabled=false
