--- a/dynamodb/deployment/src/test/resources/profile-credentials-config.properties
+++ b/dynamodb/deployment/src/test/resources/profile-credentials-config.properties
@@ -3,3 +3,4 @@ quarkus.dynamodb.aws.region=us-east-2
 quarkus.dynamodb.aws.credentials.type=profile
 quarkus.dynamodb.aws.credentials.profile-provider.profile-name=myprofile
 
+quarkus.dynamodb.devservices.enabled=false
