--- a/dynamodb/deployment/src/test/resources/sync-apache-broken-config.properties
+++ b/dynamodb/deployment/src/test/resources/sync-apache-broken-config.properties
@@ -1,4 +1,4 @@
 quarkus.dynamodb.sync-client.type = apache
 quarkus.dynamodb.sync-client.apache.max-connections = -10
 
-
+quarkus.dynamodb.devservices.enabled=false
