--- a/sqs/deployment/pom.xml
+++ b/sqs/deployment/pom.xml
@@ -32,6 +32,10 @@
             <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-sqs</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-devservices-sqs</artifactId>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
