feat: use moto for cognito user pools

--- a/devservices/cognito-user-pools/pom.xml
+++ b/devservices/cognito-user-pools/pom.xml
@@ -29,7 +29,7 @@
                         <path>
                             <groupId>io.quarkus</groupId>
                             <artifactId>quarkus-extension-processor</artifactId>
-                            <version>${project.version}</version>
+                            <version>${quarkus.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
