--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 quarkus.http.test-timeout=1m
 
-quarkus.aws.devservices.image-name=localstack/localstack:0.13.1
-quarkus.aws.devservices.container-properties."START_WEB"=0
+quarkus.aws.devservices.localstack.image-name=localstack/localstack:0.13.1
+quarkus.aws.devservices.localstack.container-properties."START_WEB"=0
+quarkus.aws.devservices.moto.image-name=motoserver/moto:3.0.2
 
 quarkus.dynamodb.interceptors=io.quarkus.it.amazon.dynamodb.DynamoDBModifyResponse
 quarkus.s3.interceptors=io.quarkus.it.amazon.s3.S3ModifyResponse
