Introduce dynamodb-enhanced extension
Co-authored by Nithanim

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -54,6 +54,16 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-dynamodb-enhanced</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-dynamodb-enhanced-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
                 <artifactId>quarkus-amazon-devservices-iam</artifactId>
                 <version>${project.version}</version>
             </dependency>
