--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -34,6 +34,10 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-dynamodb-enhanced</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-iam</artifactId>
         </dependency>
         <dependency>
