--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>common</module>
         <module>devservices</module>
         <module>dynamodb</module>
+        <module>dynamodb-enhanced</module>
         <module>iam</module>
         <module>s3</module>
         <module>sns</module>
