Update to AWS SDK 2.18.41

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -23,6 +23,11 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
+                <groupId>software.amazon.awssdk.crt</groupId>
+                <artifactId>aws-crt</artifactId>
+                <version>${awscrt.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>io.quarkiverse.amazonservices</groupId>
                 <artifactId>quarkus-amazon-common</artifactId>
                 <version>${project.version}</version>
