--- a/s3/runtime/pom.xml
+++ b/s3/runtime/pom.xml
@@ -49,6 +49,10 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>software.amazon.awssdk.crt</groupId>
+            <artifactId>aws-crt</artifactId>
+        </dependency>
+        <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>netty-nio-client</artifactId>
             <optional>true</optional>
