Allow to start additional localstack services for dev services

--- a/common/deployment-spi/pom.xml
+++ b/common/deployment-spi/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>quarkus-amazon-common-deployment-spi</artifactId>
-    <name>Quarkus - Amazon Services - Common - Deployment</name>
+    <name>Quarkus - Amazon Services - Common - Deployment Spi</name>
 
     <dependencies>
         <dependency>
