--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -2,6 +2,8 @@ quarkus.http.test-timeout=1m
 
 quarkus.aws.devservices.localstack.image-name=localstack/localstack:0.13.1
 quarkus.aws.devservices.localstack.container-properties."START_WEB"=0
+quarkus.aws.devservices.localstack.additional-services.kinesis.enabled=true
+quarkus.aws.devservices.localstack.additional-services.redshift.enabled=true
 quarkus.aws.devservices.moto.image-name=motoserver/moto:3.0.2
 
 quarkus.dynamodb.interceptors=io.quarkus.it.amazon.dynamodb.DynamoDBModifyResponse
