Force s3 client configured with devservice to use path-style addressing

--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -6,5 +6,7 @@ quarkus.aws.devservices.localstack.additional-services.kinesis.enabled=true
 quarkus.aws.devservices.localstack.additional-services.redshift.enabled=true
 quarkus.aws.devservices.moto.image-name=motoserver/moto:3.0.2
 
+quarkus.s3.devservices.buckets=quarkus.test.bucket
+
 quarkus.dynamodb.interceptors=io.quarkus.it.amazon.dynamodb.DynamoDBModifyResponse
 quarkus.s3.interceptors=io.quarkus.it.amazon.s3.S3ModifyResponse
