Add support for TCP Keep-Alive

--- a/dynamodb/deployment/src/test/resources/async-full-config.properties
+++ b/dynamodb/deployment/src/test/resources/async-full-config.properties
@@ -17,6 +17,7 @@ quarkus.dynamodb.async-client.connection-acquisition-timeout=0.01S
 quarkus.dynamodb.async-client.connection-time-to-live=0.01S
 quarkus.dynamodb.async-client.connection-max-idle-time=0.01S
 quarkus.dynamodb.async-client.use-idle-connection-reaper=false
+quarkus.dynamodb.async-client.tcp-keep-alive=true
 quarkus.dynamodb.async-client.protocol = http1-1
 quarkus.dynamodb.async-client.http2.max-streams = 10
 quarkus.dynamodb.async-client.http2.initial-window-size = 10
