--- a/dynamodb/deployment/src/test/resources/sync-apache-full-config.properties
+++ b/dynamodb/deployment/src/test/resources/sync-apache-full-config.properties
@@ -20,6 +20,7 @@ quarkus.dynamodb.sync-client.apache.connection-time-to-live = 0.100S
 quarkus.dynamodb.sync-client.apache.max-connections = 10
 quarkus.dynamodb.sync-client.apache.expect-continue-enabled = true
 quarkus.dynamodb.sync-client.apache.use-idle-connection-reaper = true
+quarkus.dynamodb.sync-client.apache.tcp-keep-alive = true
 quarkus.dynamodb.sync-client.apache.proxy.enabled = true
 quarkus.dynamodb.sync-client.apache.proxy.endpoint = http://127.1.1.1
 quarkus.dynamodb.sync-client.apache.proxy.username = foo
