--- a/devservices/s3/pom.xml
+++ b/devservices/s3/pom.xml
@@ -19,6 +19,10 @@
             <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-s3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>url-connection-client</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
