--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -70,6 +70,11 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-sts-deployment</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-cognito-user-pools-deployment</artifactId>
             <version>${project.version}</version>
         </dependency>
