\#30 sts documentation draft

--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -126,7 +126,8 @@
                                         <include>quarkus-amazon-sns.adoc</include>
                                         <include>quarkus-amazon-sqs.adoc</include>
                                         <include>quarkus-amazon-ssm.adoc</include>
-                                        <include>quarkus-amazon-cognitouserpools.adoc</include>                                        
+                                        <include>quarkus-amazon-sts.adoc</include>
+                                        <include>quarkus-amazon-cognitouserpools.adoc</include>
                                     </includes>
                                     <filtering>false</filtering>
                                 </resource>
