add sts extension
* add simple sts native support

* #30 rebased, refreshed according to current quarkus version, enabled dev services, added integration tests

* \#30 sts documentation draft

* #30 fix inject, formatting

* #30 fixes after rebase

* fix after rebase

---------

Co-authored-by: nicolas vivot <nvivot@gaba.co.jp>
Co-authored-by: Pavel.Vervenko <pavel.vervenko@coople.com>
Co-authored-by: Sébastien Crocquesel <88554524+scrocquesel@users.noreply.github.com>

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -202,6 +202,22 @@
                 <artifactId>quarkus-amazon-cognito-user-pools-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-sts</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-sts-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-devservices-sts</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
