--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -70,6 +70,11 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-sts-deployment</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-cognito-user-pools-deployment</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -121,7 +126,8 @@
                                         <include>quarkus-amazon-sns.adoc</include>
                                         <include>quarkus-amazon-sqs.adoc</include>
                                         <include>quarkus-amazon-ssm.adoc</include>
-                                        <include>quarkus-amazon-cognitouserpools.adoc</include>                                        
+                                        <include>quarkus-amazon-sts.adoc</include>
+                                        <include>quarkus-amazon-cognitouserpools.adoc</include>
                                     </includes>
                                     <filtering>false</filtering>
                                 </resource>
