--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -11,3 +11,5 @@ quarkus.s3.devservices.buckets=quarkus.test.bucket
 quarkus.dynamodb.interceptors=io.quarkus.it.amazon.dynamodb.DynamoDBModifyResponse
 quarkus.s3.interceptors=io.quarkus.it.amazon.s3.S3ModifyResponse
 quarkus.dynamodbenhanced.client-extensions=software.amazon.awssdk.enhanced.dynamodb.extensions.VersionedRecordExtension,io.quarkus.it.amazon.dynamodb.enhanced.MyExtension
+
+quarkus.s3.sync-client.type=apache
