--- a/common/pom.xml
+++ b/common/pom.xml
@@ -14,6 +14,10 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>runtime-apache-client-internal</module>
+        <module>deployment-apache-client-internal</module>
+        <module>runtime-netty-client-internal</module>
+        <module>deployment-netty-client-internal</module>
         <module>runtime</module>
         <module>deployment-spi</module>
         <module>deployment</module>
