feat: use Quarkus EventLoopGroup for Netty based clients

--- a/cognito-user-pools/deployment/pom.xml
+++ b/cognito-user-pools/deployment/pom.xml
@@ -44,6 +44,13 @@
             <artifactId>netty-nio-client</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Imported manually because conditional dependencies
+         are not automatically added to test scope -->
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-netty-client-internal-deployment</artifactId> 
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>url-connection-client</artifactId>
