--- a/common/deployment/pom.xml
+++ b/common/deployment/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>quarkus-amazon-common-deployment-spi</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-common-deployment-devservices-spi</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-devservices-deployment</artifactId>
         </dependency>
