--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -34,6 +34,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-common-deployment-devservices-spi</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
                 <artifactId>quarkus-amazon-common-deployment-spi</artifactId>
                 <version>${project.version}</version>
             </dependency>
