--- a/dynamodb-enhanced/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/dynamodb-enhanced/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -11,5 +11,5 @@ metadata:
     - "amazon"
   categories:
     - "data"
-  guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-dynamodb.html
+  guide: https://docs.quarkiverse.io/quarkus-amazon-services/dev/amazon-dynamodb.html
   status: "stable"
