--- a/secretsmanager/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/secretsmanager/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -8,7 +8,7 @@ metadata:
     - "amazon"
   categories:
     - "data"
-  guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-secretsmanager.html
+  guide: https://docs.quarkiverse.io/quarkus-amazon-services/dev/amazon-secretsmanager.html
   status: "preview"
   config:
   - "quarkus.secretsmanager."
