fix: refactor dependency on netty

--- a/common/deployment-spi/pom.xml
+++ b/common/deployment-spi/pom.xml
@@ -13,12 +13,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-core-deployment</artifactId>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-transport</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-arc-deployment</artifactId>
+            <artifactId>quarkus-builder</artifactId>
         </dependency>
     </dependencies>
 
