--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        alternative-client-implementation: ['true', 'false']
 
     steps:
       - uses: actions/checkout@v3
@@ -36,4 +39,4 @@ jobs:
           java-version: 11
           cache: maven
       - name: Build with Maven
-        run: ./mvnw -B formatter:validate verify --file pom.xml -Dnative
+        run: ./mvnw -B formatter:validate verify --file pom.xml -Dnative -Dalternative-client-implementation=${{ matrix.alternative-client-implementation }}
