--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -12,5 +12,25 @@ quarkus.dynamodb.interceptors=io.quarkus.it.amazon.dynamodb.DynamoDBModifyRespon
 quarkus.s3.interceptors=io.quarkus.it.amazon.s3.S3ModifyResponse
 quarkus.dynamodbenhanced.client-extensions=software.amazon.awssdk.enhanced.dynamodb.extensions.VersionedRecordExtension,io.quarkus.it.amazon.dynamodb.enhanced.MyExtension
 
-quarkus.s3.sync-client.type=apache
-quarkus.kms.async-client.type=aws-crt
+quarkus.cognito-user-pools.sync-client.type=${sync-client.type}
+quarkus.dynamodb.sync-client.type=${sync-client.type}
+quarkus.iam.sync-client.type=${sync-client.type}
+quarkus.kms.sync-client.type=${sync-client.type}
+quarkus.s3.sync-client.type=${sync-client.type}
+quarkus.secretsmanager.sync-client.type=${sync-client.type}
+quarkus.ses.sync-client.type=${sync-client.type}
+quarkus.sns.sync-client.type=${sync-client.type}
+quarkus.sqs.sync-client.type=${sync-client.type}
+quarkus.ssm.sync-client.type=${sync-client.type}
+quarkus.sts.sync-client.type=${sync-client.type}
+quarkus.cognito-user-pools.async-client.type=${async-client.type}
+quarkus.dynamodb.async-client.type=${async-client.type}
+quarkus.iam.async-client.type=${async-client.type}
+quarkus.kms.async-client.type=${async-client.type}
+quarkus.s3.async-client.type=${async-client.type}
+quarkus.secretsmanager.async-client.type=${async-client.type}
+quarkus.ses.async-client.type=${async-client.type}
+quarkus.sns.async-client.type=${async-client.type}
+quarkus.sqs.async-client.type=${async-client.type}
+quarkus.ssm.async-client.type=${async-client.type}
+quarkus.sts.async-client.type=${async-client.type}
