--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -4,6 +4,7 @@ quarkus.aws.devservices.localstack.image-name=localstack/localstack:2.3.0
 quarkus.aws.devservices.localstack.container-properties."START_WEB"=0
 quarkus.aws.devservices.localstack.additional-services.kinesis.enabled=true
 quarkus.aws.devservices.localstack.additional-services.redshift.enabled=true
+quarkus.aws.devservices.localstack.additional-services.lambda.enabled=true
 quarkus.aws.devservices.moto.image-name=motoserver/moto:3.0.2
 
 quarkus.s3.devservices.buckets=quarkus.test.bucket
@@ -17,6 +18,7 @@ quarkus.dynamodb.sync-client.type=${sync-client.type}
 quarkus.iam.sync-client.type=${sync-client.type}
 quarkus.kms.sync-client.type=${sync-client.type}
 quarkus.s3.sync-client.type=${sync-client.type}
+quarkus.lambda.sync-client.type=${sync-client.type}
 quarkus.secretsmanager.sync-client.type=${sync-client.type}
 quarkus.ses.sync-client.type=${sync-client.type}
 quarkus.sns.sync-client.type=${sync-client.type}
@@ -28,6 +30,7 @@ quarkus.dynamodb.async-client.type=${async-client.type}
 quarkus.iam.async-client.type=${async-client.type}
 quarkus.kms.async-client.type=${async-client.type}
 quarkus.s3.async-client.type=${async-client.type}
+quarkus.lambda.async-client.type=${async-client.type}
 quarkus.secretsmanager.async-client.type=${async-client.type}
 quarkus.ses.async-client.type=${async-client.type}
 quarkus.sns.async-client.type=${async-client.type}
