feat: add AWS Quarkus Lambda Client (#1003)
* Quarkus lambda client - initial version

* Quarkus lambda client - support in devservices

* Quarkus lambda client - adding into IT

* Quarkus lambda client - LambdaDevServiceCfg adding equals and hashcode

* Quarkus lambda client - added LambdaSyncClientFullConfigTest

* Quarkus lambda client - addressed PR comments

* Quarkus lambda client - addressed PR comments

* Quarkus lambda client - LambdaIT - fix lambda name

* Quarkus lambda client (#1)

* fix and doc

* use init script

* use `lambda` instead or `lambda client`

* fix localstack version

---------

Co-authored-by: Sébastien Crocquesel <88554524+scrocquesel@users.noreply.github.com>

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -159,6 +159,21 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-lambda</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-devservices-lambda</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-lambda-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
                 <artifactId>quarkus-amazon-devservices-secretsmanager</artifactId>
                 <version>${project.version}</version>
             </dependency>
