--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -17,6 +17,7 @@ quarkus.dynamodb.sync-client.type=${sync-client.type}
 quarkus.iam.sync-client.type=${sync-client.type}
 quarkus.kms.sync-client.type=${sync-client.type}
 quarkus.s3.sync-client.type=${sync-client.type}
+quarkus.lambda.sync-client.type=${sync-client.type}
 quarkus.secretsmanager.sync-client.type=${sync-client.type}
 quarkus.ses.sync-client.type=${sync-client.type}
 quarkus.sns.sync-client.type=${sync-client.type}
@@ -28,6 +29,7 @@ quarkus.dynamodb.async-client.type=${async-client.type}
 quarkus.iam.async-client.type=${async-client.type}
 quarkus.kms.async-client.type=${async-client.type}
 quarkus.s3.async-client.type=${async-client.type}
+quarkus.lambda.async-client.type=${async-client.type}
 quarkus.secretsmanager.async-client.type=${async-client.type}
 quarkus.ses.async-client.type=${async-client.type}
 quarkus.sns.async-client.type=${async-client.type}
