--- a/devservices/pom.xml
+++ b/devservices/pom.xml
@@ -29,5 +29,6 @@
         <module>ssm</module>
         <module>sts</module>
         <module>lambda</module>
+        <module>sfn</module>
     </modules>
 </project>
